--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,3 @@
-body{
-  align-items: center;
-  text-align: center;
-  padding:0;
-  margin:0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  /* background-image: url(images/model-s.jpg); */
-  background: pink;
-  background-size: cover;
-  width: 100vw;
-  height: 100vw;
-  font-weight: bolder;
+p{
+  color: #5c5d6131;
 }
